WP-8605 social icons mobile display issue fixes with footer landscape mode alignment issue fixes

--- a/css/style.css
+++ b/css/style.css
@@ -7577,6 +7577,11 @@ input.signup-submit:hover {
     padding-bottom: 0px;
   }
 }
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #gsb-footer-three .region-footer-three {
+    padding-bottom: 50px;
+  }
+}
 
 #gsb-footer-two #block-block-37,
 #gsb-footer-two #block-block-41 {
@@ -7607,6 +7612,12 @@ input.signup-submit:hover {
     margin: 0;
     padding-top: 18px;
     padding-bottom: 0px;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #gsb-footer-two #block-menu-menu-footer-1,
+  #gsb-footer-two #block-menu-menu-footer-alumni-section {
+    margin-left: 21%;
   }
 }
 #gsb-footer-two #block-menu-menu-footer-1 .content,
@@ -7715,6 +7726,12 @@ input.signup-submit:hover {
     font-size: 14px;
   }
 }
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #gsb-footer-two #block-menu-menu-footer-1 li a,
+  #gsb-footer-two #block-menu-menu-footer-2 li a {
+    font-size: 16px;
+  }
+}
 
 #gsb-footer-one #block-gsb-public-custom-blocks-gpcb-footer-logo {
   width: 40%;
@@ -7743,6 +7760,11 @@ input.signup-submit:hover {
     padding-bottom: 25px;
     border-bottom: none;
     padding-top: 10px;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #gsb-footer-one #block-gsb-public-custom-blocks-gpcb-follow-us {
+    margin-right: -3%;
   }
 }
 #gsb-footer-one #block-gsb-public-custom-blocks-gpcb-follow-us h2 {
@@ -7906,10 +7928,11 @@ input.signup-submit:hover {
 @media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
   .svg #ftr-logo, .no-js #ftr-logo, .no-svg #ftr-logo {
     float: left;
-    height: 54px;
+    height: 70px;
     left: 0px;
     position: relative;
     width: 185px;
+    margin-top: 5px;
   }
   .page-insights #ftr-logo, .page-404 #ftr-logo {
     left: 0;
@@ -7937,6 +7960,12 @@ input.signup-submit:hover {
     padding-left: 0px;
   }
 }
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #block-block-41 .gsb-footer-address .address,
+  #block-block-37 .gsb-footer-address .address {
+    font-size: 16px;
+  }
+}
 @media (max-width: 62.4375em) {
   #block-block-41 .gsb-footer-address,
   #block-block-37 .gsb-footer-address {
@@ -7962,6 +7991,11 @@ input.signup-submit:hover {
 @media (max-width: 62.4375em) {
   #block-menu-menu-footer-4 li {
     font-size: 14px;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #block-menu-menu-footer-4 li {
+    font-size: 16px;
   }
 }
 #block-menu-menu-footer-4 li:after {
@@ -8004,6 +8038,16 @@ input.signup-submit:hover {
   font-weight: normal;
   font-size: 14px;
 }
+@media (max-width: 62.4375em) {
+  #legal-new .region-legal-new .gsb-footer-meta {
+    font-size: 13px;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #legal-new .region-legal-new .gsb-footer-meta {
+    font-size: 13px;
+  }
+}
 #legal-new .region-legal-new #block-menu-menu-footer-3-new {
   color: white;
   font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -8018,6 +8062,12 @@ input.signup-submit:hover {
     padding-bottom: 0px;
     float: none;
     position: relative;
+    font-size: 13px;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #legal-new .region-legal-new #block-menu-menu-footer-3-new {
+    font-size: 13px;
   }
 }
 #legal-new .region-legal-new #block-menu-menu-footer-3-new .content {
@@ -8038,6 +8088,11 @@ input.signup-submit:hover {
     padding-bottom: 20px;
     display: block;
     margin: 4px 0;
+  }
+}
+@media (min-width: 60em) and (max-width: 68.75em) and (orientation: landscape) {
+  #legal-new .region-legal-new #block-menu-menu-footer-3-new li {
+    margin-right: 25px;
   }
 }
 #legal-new .region-legal-new #block-menu-menu-footer-3-new li:first-of-type {
